desktop (2.1-5) UNRELEASED; urgency=medium

  * added panel orientation (credit goes to Stephan Passow)
  * kiosk-mode: replaced maxwm with dwm (maxwm symlinks to dwm)
  * kiosk-mode: spawn a terminal with ctrl+alt+x, switch virtual desktops with
    alt+0 (1, 2, ...)

 -- Steffen Hoenig <s.hoenig@openthinclient.com>  Thu, 24 Sep 2015 15:07:45 +0000

desktop (2.1-3) unstable; urgency=medium

  * added Session type Desktop, Autostart programs, Terminal 

 -- Steffen Hoenig <s.hoenig@openthinclient.com>  Wed, 22 Jul 2015 23:19:54 +0200

desktop (2.1-2.1) unstable; urgency=low

  * Xserver-listen-tcp as "Experteneinstellung" added to Configuration

 -- Lars Behrens <l.behrens@openthinclient.com>  Thu, 19 Mar 2015 04:58:58 +0100

desktop (2.1-1) unstable; urgency=medium

  * removed the entry of the mixer-applet in dconf db file

 -- Steffen Hoenig <s.hoenig@openthinclient.com>  Thu, 12 Mar 2015 18:48:36 +0100

desktop (2.0-15) unstable; urgency=low

  * fixed caja popping up after "dconf update"
     - this was really annoying
     - chmod the binary of caja to 000 before and back again to 755 after calling dconf

 -- Joern Frenzel <j.frenzel@openthinclient.com>  Sun, 28 Sep 2014 00:04:12 +0200

desktop (2.0-14) unstable; urgency=low

  * fixed default value for org_mate_marco_global-keybindings.switch-windows

 -- Joern Frenzel <j.frenzel@openthinclient.com>  Fri, 19 Sep 2014 14:34:39 +0200

desktop (2.0-13) unstable; urgency=low

  * fixes: https://github.com/openthinclient/os-applications/issues/13
      desktop: hotkey for task-switch dysfunctional
  * fixes: https://github.com/openthinclient/os-applications/issues/12
      desktop: display power management without functions
  * fixes a none working numlock manager setting

 -- Joern Frenzel <j.frenzel@openthinclient.com>  Mon, 15 Sep 2014 10:29:02 +0200

desktop (2.0-12) unstable; urgency=low

  * FIX: defaults in the manager weren't visible
