@@ -4,6 +4,7 @@ desktop (2.1-5) UNRELEASED; urgency=medium
   * kiosk-mode: replaced maxwm with dwm (maxwm symlinks to dwm)
   * kiosk-mode: spawn a terminal with ctrl+alt+x, switch virtual desktops with
     alt+0 (1, 2, ...)
+  * added disable Logout prompt Feature (credit goes to Stephan Passow) 
 
  -- Steffen Hoenig <s.hoenig@openthinclient.com>  Thu, 24 Sep 2015 15:07:45 +0000
 
